GNOME Bugzilla – Bug 793362
gnome-applets 3.27 undefined references with libgweather 3.27
Last modified: 2018-02-11 13:27:16 UTC
Created attachment 368227 [details] [review] patch for gnome-applets 3.26 to build with libgweather 3.27 I tried building gnome-applets 3.26.0 on Ubuntu 18.04 Alpha with libgweather 3.27.4. I am attaching a patch that squashed the recent libgweather related commits for gnome-applets. The Debian/Ubuntu package builds with -Wl,-z,defs. The build fails: .libs/libgweather_applet_la-gweather-dialog.o: In function `gweather_dialog_update': ./gweather/src/gweather-dialog.c:565: undefined reference to `gweather_info_get_forecast' Full build log at https://launchpad.net/~jbicha/+archive/ubuntu/templibgweather/+build/14335792
Thanks, today's commit fixed my issue.