gweather: update applet for API change, again

Change in fe93cb42f976ba5a1f2456f87dcb281eafc76dd2 was not enough,
libgweather library also removed functions that was deprecated.

get_forecast function is modified version of original function from
libgweather.

https://bugzilla.gnome.org/show_bug.cgi?id=793362